--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+Version Next
+
+    - Set Accept-Encoding header (issue #48)
+
 Version 1.4.1 released May 4, 2015
 
     - Fix use-after-free bug configuring base URL (github issue #44)
